--- a/index.html
+++ b/index.html
@@ -45,9 +45,38 @@
         <div class="hexTop"></div>
         <div class="hexBottom"></div>
       </div>
-
-      <div class="item-con">
+      <div class="skills">
+        <h2>Geff Bourke</h2>
+        <table>
+          <tr>
+            <td class="left-skill">Location</td>
+            <td>Clare, Ireland</td>
+          </tr>
+          <tr>
+            <td class="left-skill">Education</td>
+            <td>B.Sc in Computer Games Development from The University of Limerick in 2016</td>
+          </tr>
+          <tr>
+            <td class="left-skill">Languages</td>
+            <td>C++, Java, C#, Lua, JavaScript, HTML, CSS, SQL</td>
+          </tr>
+          <tr>
+            <td class="left-skill">Technologies</td>
+            <td>Git, Unity, JQuery</td>
+          </tr>
+          <tr>
+            <td class="left-skill">Hobbies</td>
+            <td>Breakdancing, Esports</td>
+          </tr>
+        </table>
       </div>
+
+      <div id="catagory">
+        <button class="btn" data-type="games">Games</button>
+        <button class="btn" data-type="software">Software</button>
+      </div>
+
+      <div class="item-con"></div>
     </div>
   </div>
 
