--- a/index.html
+++ b/index.html
@@ -23,22 +23,23 @@
     <!-- ============================ -->
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Titillium+Web" rel="stylesheet">
-    <link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
+    <link rel="shortcut icon" type="image/ico" href="/favicon.png" />
 
     <link rel="stylesheet" href="/css/me.css">
     <script src="/js/me.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="width=device-width">
-    <title>Geff Bourke - Porfolio</title>
+    <title>Geff Bourke - Portfolio</title>
   </head>
 
   <body>
     <div class="navbar">
-      <a href="#" class="fa fa-linkedin"></a>
-      <a href="#" class="fa fa-github"></a>
-      <a href="#" class="fa fa-envelope-o"></a>
+      <span class="fa fa-envelope-o show-email"></span>
+      <a href="https://github.com/Glockenspiel" target="_blank" class="fa fa-github"></a>
+      <a href="https://www.linkedin.com/in/geff-bourke-91b238115/" target="_blank" class="fa fa-linkedin"></a>
     </div>
+    <div class="email"><span class="reverse">moc.liamg@321ekruobffeg</span></div></div>
 
     <div class="content">
       <div class="hexagon profile-img">
@@ -54,7 +55,7 @@
           </tr>
           <tr>
             <td class="left-skill">Education</td>
-            <td>B.Sc in Computer Games Development from The University of Limerick in 2016</td>
+            <td>B.Sc in Computer Games Development</td>
           </tr>
           <tr>
             <td class="left-skill">Languages</td>
@@ -74,11 +75,21 @@
       <div id="catagory">
         <button class="btn" data-type="games">Games</button>
         <button class="btn" data-type="software">Software</button>
+        <button class="btn" data-type="edu">Education</button>
       </div>
 
       <div class="item-con"></div>
     </div>
   </div>
 
+  <div class="enlarge-modal">
+    <div class="enlarge-con"></div>
+    <div class="modal-bg"></div>
+    <div class="modal-close"><button class="btn fa fa-window-close"></button></div>
+    <div class="modal-arrows">
+      <button class="btn fa fa-arrow-left changeImg" data-direction="left"></button>
+      <button class="btn fa fa-arrow-right changeImg" data-direction="right"></button>
+    </div>
+  </div>
   </body>
 </head>
