compressed imgs, gifs converted to videos and meta data

--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta content="utf-8" http-equiv="encoding">
     <meta http-equiv="Cache-Control" content="max-age=120"/>
-    <!--ADDONS-->
-    <!-- ============================ -->
+
     <!--jQuery-->
     <script
     src="https://code.jquery.com/jquery-3.2.1.min.js"
@@ -20,17 +19,33 @@
     <!--icons from Font Awesome-->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
-    <!-- ============================ -->
-
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Titillium+Web" rel="stylesheet">
     <link rel="shortcut icon" type="image/ico" href="/favicon.png" />
 
-    <link rel="stylesheet" href="/css/me.css">
-    <script src="/js/me.js"></script>
+    <link rel="stylesheet" href="/css/me.min.css">
+    <script src="/js/me.min.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="width=device-width">
     <title>Geff Bourke - Portfolio</title>
+    <meta name="description" content="Games and software developer portfolio">
+    <meta name="keywords" content="games developer portfolio, game developer, portfolio, best game developer, software developer, ireland">
+
+      <!-- Twitter Card data -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@geffbourke">
+    <meta name="twitter:title" content="Geff Bourke - Portfolio">
+    <meta name="twitter:description" content="Games and software developer portfolio">
+    <meta name="twitter:creator" content="@geffbourke">
+    <meta name="twitter:image" content="http://www.geffbourke.com/res/img/profile.png">
+
+    <!-- Open Graph data -->
+    <meta property="og:title" content="Geff Bourke - Portfolio" />
+    <meta property="og:type" content="home" />
+    <meta property="og:url" content="geffbourke.com" />
+    <meta property="og:image" content="http://www.geffbourke.com/res/img/profile.png"/>
+    <meta property="og:description" content="Games and software developer portfolio"/>
+    <meta property="og:site_name" content="geffbourke" />
   </head>
 
   <body>
@@ -47,7 +62,7 @@
         <div class="hexBottom"></div>
       </div>
       <div class="skills">
-        <h2>Geff Bourke</h2>
+        <h2>Geff Bourke - Portfolio</h2>
         <table>
           <tr>
             <td class="left-skill">Location</td>
