fixes to scroll lock and more

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <!--icons from Font Awesome-->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Titillium+Web" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
     <link rel="shortcut icon" type="image/ico" href="/favicon.png" />
 
-    <link rel="stylesheet" href="/css/me.min.css">
-    <script src="/js/me.min.js"></script>
+    <link rel="stylesheet" href="/css/me.css">
+    <script src="/js/me.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="width=device-width">
