added background img and video pauses when changing catagory

--- a/index.html
+++ b/index.html
@@ -49,43 +49,44 @@
 
   <body>
     <div class="navbar">
-      <span class="fa fa-envelope-o show-email"></span>
+      <div class="fa fa-envelope-o show-email"></div>
       <a href="https://github.com/Glockenspiel" target="_blank" class="fa fa-github"></a>
       <a href="https://www.linkedin.com/in/geff-bourke-91b238115/" target="_blank" class="fa fa-linkedin"></a>
     </div>
     <div class="email"><span class="reverse">moc.liamg@321ekruobffeg</span></div></div>
 
     <div class="content">
-      <div class="hexagon profile-img">
-        <div class="hexTop"></div>
-        <div class="hexBottom"></div>
+      <div class="top-content">
+        <div class="hexagon profile-img">
+          <div class="hexTop"></div>
+          <div class="hexBottom"></div>
+        </div>
+        <div class="skills">
+          <h2>Geff Bourke - Portfolio</h2>
+          <table>
+            <tr>
+              <td class="left-skill">Location</td>
+              <td>Clare, Ireland</td>
+            </tr>
+            <tr>
+              <td class="left-skill">Education</td>
+              <td>B.Sc in Computer Games Development</td>
+            </tr>
+            <tr>
+              <td class="left-skill">Languages</td>
+              <td>C++, Java, C#, Lua, JavaScript, HTML, CSS, SQL</td>
+            </tr>
+            <tr>
+              <td class="left-skill">Technologies</td>
+              <td>Git, Unity, JQuery</td>
+            </tr>
+            <tr>
+              <td class="left-skill">Hobbies</td>
+              <td>Breakdancing, Esports</td>
+            </tr>
+          </table>
+        </div>
       </div>
-      <div class="skills">
-        <h2>Geff Bourke - Portfolio</h2>
-        <table>
-          <tr>
-            <td class="left-skill">Location</td>
-            <td>Clare, Ireland</td>
-          </tr>
-          <tr>
-            <td class="left-skill">Education</td>
-            <td>B.Sc in Computer Games Development</td>
-          </tr>
-          <tr>
-            <td class="left-skill">Languages</td>
-            <td>C++, Java, C#, Lua, JavaScript, HTML, CSS, SQL</td>
-          </tr>
-          <tr>
-            <td class="left-skill">Technologies</td>
-            <td>Git, Unity, JQuery</td>
-          </tr>
-          <tr>
-            <td class="left-skill">Hobbies</td>
-            <td>Breakdancing, Esports</td>
-          </tr>
-        </table>
-      </div>
-
       <div id="catagory">
         <button class="btn" data-type="games">Games</button>
         <button class="btn" data-type="software">Software</button>
