remade right side navbar

--- a/index.html
+++ b/index.html
@@ -48,12 +48,7 @@
   </head>
 
   <body>
-    <div class="navbar">
-      <div class="fa fa-envelope-o show-email"></div>
-      <a href="https://github.com/Glockenspiel" target="_blank" class="fa fa-github"></a>
-      <a href="https://www.linkedin.com/in/geff-bourke-91b238115/" target="_blank" class="fa fa-linkedin"></a>
-    </div>
-    <div class="email"><span class="reverse">moc.liamg@321ekruobffeg</span></div></div>
+
 
     <div class="content">
       <div class="top-content">
@@ -91,6 +86,10 @@
         <button class="btn" data-type="games">Games</button>
         <button class="btn" data-type="software">Software</button>
         <button class="btn" data-type="edu">Education</button>
+        <a href="https://www.linkedin.com/in/geff-bourke-91b238115/" target="_blank" class="fa fa-linkedin"></a>
+        <a href="https://github.com/Glockenspiel" target="_blank" class="fa fa-github"></a>
+        <div class="fa fa-envelope-o show-email"></div>
+        <div class="email">Email: <span class="reverse">moc.liamg@321ekruobffeg</span></div>
       </div>
 
       <div class="item-con"></div>
