added mobile version

--- a/index.html
+++ b/index.html
@@ -21,14 +21,13 @@
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
     <link rel="shortcut icon" type="image/ico" href="/favicon.png" />
 
-    <link rel="stylesheet" href="/css/me.css">
-    <script src="/js/me.js"></script>
+    <link rel="stylesheet" href="/css/me.min.css">
+    <script src="/js/me.min.js"></script>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="viewport" content="width=device-width">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>Geff Bourke - Portfolio</title>
     <meta name="description" content="Games and software developer portfolio">
-    <meta name="keywords" content="games developer portfolio, game developer, portfolio, best game developer, software developer, ireland">
+    <meta name="keywords" content="geff bourke, games developer portfolio, game developer, portfolio, best game developer, software developer, ireland">
 
       <!-- Twitter Card data -->
     <meta name="twitter:card" content="summary">
@@ -48,8 +47,6 @@
   </head>
 
   <body>
-
-
     <div class="content">
       <div class="top-content">
         <div class="hexagon profile-img">
@@ -57,7 +54,7 @@
           <div class="hexBottom"></div>
         </div>
         <div class="skills">
-          <h2>Geff Bourke - Portfolio</h2>
+          <h1>Geff Bourke - Portfolio</h1>
           <table>
             <tr>
               <td class="left-skill">Location</td>
