added media files and updated to dark theme

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <!--icons from Font Awesome-->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Barlow" rel="stylesheet">
     <link rel="shortcut icon" type="image/ico" href="/favicon.png" />
 
-    <link rel="stylesheet" href="/css/me.min.css">
-    <script src="/js/me.min.js"></script>
+    <link rel="stylesheet" href="/css/me.css">
+    <script src="/js/me.js"></script>
 
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>Geff Bourke - Portfolio</title>
@@ -66,7 +66,7 @@
             </tr>
             <tr>
               <td class="left-skill">Languages</td>
-              <td>C++, Java, C#, Lua, JavaScript, HTML, CSS, SQL</td>
+              <td>C++, Java, C#, JavaScript, Lua, CSS, SQL, HTML</td>
             </tr>
             <tr>
               <td class="left-skill">Technologies</td>
@@ -80,9 +80,9 @@
         </div>
       </div>
       <div id="catagory">
-        <button class="btn" data-type="games">Games</button>
-        <button class="btn" data-type="software">Software</button>
-        <button class="btn" data-type="edu">Education</button>
+        <div class="btn opt" data-type="games">Games</div>
+        <div class="btn opt" data-type="software">Software</div>
+        <div class="btn opt" data-type="edu">Education</div>
         <a href="https://www.linkedin.com/in/geff-bourke-91b238115/" target="_blank" class="fa fa-linkedin"></a>
         <a href="https://github.com/Glockenspiel" target="_blank" class="fa fa-github"></a>
         <div class="fa fa-envelope-o show-email"></div>
