start of rebuilding website with bwe

--- a/index2.html
+++ b/index2.html
@@ -21,9 +21,8 @@
     <link href="https://fonts.googleapis.com/css?family=Barlow" rel="stylesheet">
     <link rel="shortcut icon" type="image/ico" href="/favicon.png" />
 
-    <link rel="stylesheet" href="/css/new.css">
-    <script src="/js/bwe.js"></script>
-    <script src="/js/new.js"></script>
+    <link rel="stylesheet" href="/css/me.css">
+    <script src="/js/me.js"></script>
 
 
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
@@ -49,5 +48,60 @@
   </head>
 
   <body>
+    <div class="content">
+      <div class="top-content">
+        <div class="hexagon profile-img">
+          <div class="hexTop"></div>
+          <div class="hexBottom"></div>
+        </div>
+        <div class="skills">
+          <h1>Geff Bourke - Portfolio</h1>
+          <table>
+            <tr>
+              <td class="left-skill">Location</td>
+              <td>Clare, Ireland</td>
+            </tr>
+            <tr>
+              <td class="left-skill">Education</td>
+              <td>B.Sc in Computer Games Development</td>
+            </tr>
+            <tr>
+              <td class="left-skill">Languages</td>
+              <td>C++, Java, C#, JavaScript, Lua, CSS, SQL, HTML</td>
+            </tr>
+            <tr>
+              <td class="left-skill">Technologies</td>
+              <td>Git, Unity, JQuery</td>
+            </tr>
+            <tr>
+              <td class="left-skill">Hobbies</td>
+              <td>Breakdancing, Esports</td>
+            </tr>
+          </table>
+        </div>
+      </div>
+      <div id="catagory">
+        <div class="btn opt" data-type="games">Games</div>
+        <div class="btn opt" data-type="software">Software</div>
+        <div class="btn opt" data-type="edu">Education</div>
+        <a href="https://www.linkedin.com/in/geff-bourke-91b238115/" target="_blank" class="fa fa-linkedin"></a>
+        <a href="https://github.com/Glockenspiel" target="_blank" class="fa fa-github"></a>
+        <div class="fa fa-envelope-o show-email"></div>
+        <div class="email">Email: <span class="reverse">moc.liamg@321ekruobffeg</span></div>
+      </div>
+
+      <div class="item-con"></div>
+    </div>
+  </div>
+
+  <div class="enlarge-modal">
+    <div class="enlarge-con"></div>
+    <div class="modal-bg"></div>
+    <div class="modal-close"><button class="btn fa fa-window-close"></button></div>
+    <div class="modal-arrows">
+      <button class="btn fa fa-arrow-left changeImg" data-direction="left"></button>
+      <button class="btn fa fa-arrow-right changeImg" data-direction="right"></button>
+    </div>
+  </div>
   </body>
 </head>
