--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">-->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-
     <!--icons from Font Awesome-->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
@@ -25,7 +24,6 @@
     <script src="/js/bwe.js"></script>
     <script src="/js/new.js"></script>
 
-
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>Geff Bourke - Portfolio</title>
     <meta name="description" content="Games and software developer portfolio">
@@ -33,7 +31,7 @@
 
       <!-- Twitter Card data -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="@geffbourke">
+    <meta name="twitter:site" content="geffbourke">
     <meta name="twitter:title" content="Geff Bourke - Portfolio">
     <meta name="twitter:description" content="Games and software developer portfolio">
     <meta name="twitter:creator" content="@geffbourke">
