replaced old css and js

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <link href="https://fonts.googleapis.com/css?family=Barlow" rel="stylesheet">
     <link rel="shortcut icon" type="image/ico" href="/favicon.png" />
 
-    <link rel="stylesheet" href="/css/new.css">
+    <link rel="stylesheet" href="/css/me.min.css">
     <script src="/js/bwe.js"></script>
-    <script src="/js/new.js"></script>
+    <script src="/js/me.min.js"></script>
 
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>Geff Bourke - Portfolio</title>
